--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="hr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
@@ -21,7 +21,77 @@
       />
     </noscript>
 
-    <title>Obrt Lapiš</title>
+    <title>Vodoinstalacije Brač | Obrt Lapiš - Splitska</title>
+    <meta
+      name="description"
+      content="Vodoinstalater na otoku Brač. Ugradnja i popravak vodovodnih instalacija, dijamantno bušenje i ventilacije. Splitska, otok Brač. Pozovite za ponudu."
+    />
+    <meta
+      name="keywords"
+      content="vodoinstalacije brač, vodoinstalater brač, vodoinstalater splitska, dijamantno bušenje brač, vodoinstalacije otok brač"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:url" content="https://obrt-lapis.hr/" />
+    <meta property="og:image" content="https://obrt-lapis.hr/og-image.jpg" />
+    <link rel="canonical" href="https://obrt-lapis.hr/" />
+    <meta property="og:title" content="Vodoinstalacije Brač | Obrt Lapiš" />
+    <meta
+      property="og:description"
+      content="Stručni vodoinstalater na otoku Brač. Ugradnja instalacija, dijamantno bušenje, ventilacije."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="hr_HR" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Obrt Lapiš",
+        "description": "Vodoinstalacije, dijamantno bušenje i ventilacije na otoku Brač",
+        "url": "https://obrt-lapis.hr",
+        "telephone": "+385 98 180 0026",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Splitska",
+          "addressLocality": "Brač",
+          "addressRegion": "Splitsko-dalmatinska županija",
+          "postalCode": "21405",
+          "addressCountry": "HR"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": 43.3833,
+          "longitude": 16.5167
+        },
+        "serviceArea": {
+          "@type": "AdministrativeArea",
+          "name": "Otok Brač"
+        },
+        "hasOfferCatalog": {
+          "@type": "OfferCatalog",
+          "name": "Usluge",
+          "itemListElement": [
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "Vodoinstalacije Brač"
+              }
+            },
+            {
+              "@type": "Offer",
+              "itemOffered": {
+                "@type": "Service",
+                "name": "Dijamantno bušenje Brač"
+              }
+            },
+            {
+              "@type": "Offer",
+              "itemOffered": { "@type": "Service", "name": "Ventilacije Brač" }
+            }
+          ]
+        }
+      }
+    </script>
   </head>
   <body>
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
