--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         "description": "Vodoinstalacije, dijamantno bušenje i ventilacije na otoku Brač",
         "url": "https://obrt-lapis.hr",
         "telephone": "+385 98 180 0026",
+        "email": "obrt.lapis@gmail.com"
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "Splitska",
